# ai-engineer-portfolio

./: .gitignore  README.md  pyproject.toml  sample_document.txt
week1/day1_llm_basics/: README.md  llm_client.py  prompt_patterns.py
week1/day2_async_structured/: async_llm_client.py  structured_extractor.py
week1/day3_embeddings_rag/: README.md  embedding_explorer.py  manual_rag.py
week1/day3_extension/: mini_rag.py  vectordb_experiments.py
week1/day3_vectordb/: 01_vectordb_from_scratch.py  02_chromadb_deep_dive.py  03_multi_doc_rag.py  README.md
week1/day4_deep_dive/: 01_fastapi_fundamentals.py  02_lcel_data_flow.py  03_lifespan_patterns.py  README.md
week1/day4_langchain_rag/: README.md  api.py  rag_pipeline.py
week1/day5_prompt_engineering/: README.md  prompt_library.py  rag_with_patterns.py
week1/day6_agents/: 01_manual_agent.py  02_langchain_agent.py
week1/day6_deep_dive/: 01_scratchpad_visualizer.py  02_agent_failure_modes.py  03_agent_with_memory.py
week1/day7_docuagent/: README.md
week2/day10_evaluation/: 01_build_eval_dataset.py  02_run_ragas.py  03_break_and_measure.py  eval_dataset.json
week2/day11_observability/: 01_custom_tracer.py  02_cost_dashboard.py  03_langsmith_integration.py  README.md
week2/day12_advanced_rag/: 01_hybrid_search.py  02_reranking.py  03_hyde.py  04_comparison.py
week2/day13_multiagent/: README.md  main.py
week2/day14_researchagent/: README.md  requirements.txt
week2/day8_langgraph/: 01_graph_basics.py  02_conditional_routing.py  03_react_agent_graph.py  README.md
week2/day9_langgraph_advanced/: 01_human_in_the_loop.py  03_combined.py  (+2 more)
(+30 files in other folders)
