[project]
name = "ai-engineer-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.94.1",
    "huggingface-hub>=1.10.2",
    "ollama>=0.6.1",
    "openai>=2.31.0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
]
