[project]
name = "ai-engineer-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.94.1",
    "chromadb>=1.5.8",
    "datasets>=4.8.5",
    "fastapi>=0.136.1",
    "huggingface-hub>=1.10.2",
    "langchain>=1.2.15",
    "langchain-classic>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.9",
    "langsmith>=0.7.35",
    "numpy>=2.2.6",
    "ollama>=0.6.1",
    "openai>=2.31.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.45.0",
]
